Added timesheet list and details pages.

--- a/src/index.html
+++ b/src/index.html
@@ -100,8 +100,12 @@
     <script src="app/page-footer/page-footer.directive.js"></script>
 
     <script src="app/home/home.controller.js"></script>
+
     <script src="app/timesheet/timesheet.service.js"></script>
     <script src="app/timesheet/timesheet.controller.js"></script>
+
+    <script src="app/timesheet-details/timesheet-details.service.js"></script>
+    <script src="app/timesheet-details/timesheet-details.controller.js"></script>
 
     <!-- build:templates -->
     <!-- minify and concatenate all template files -->
