--- a/src/index.html
+++ b/src/index.html
@@ -25,9 +25,9 @@
     <!-- endbuild -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Angular Starter Kit">
+    <meta name="description" content="Nicom Timesheet System">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Angular Starter Kit</title>
+    <title>Nicom Timesheet System</title>
 
     <!-- Disable tap highlight on IE -->
     <meta name="msapplication-tap-highlight" content="no">
@@ -37,13 +37,13 @@
 
     <!-- Add to homescreen for Chrome on Android -->
     <meta name="mobile-web-app-capable" content="yes">
-    <meta name="application-name" content="Angular Starter Kit">
+    <meta name="application-name" content="Nicom Timesheet System">
     <link rel="icon" sizes="192x192" href="images/chrome-touch-icon-192x192.png">
 
     <!-- Add to homescreen for Safari on iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="Angular Starter Kit">
+    <meta name="apple-mobile-web-app-title" content="Nicom Timesheet System">
     <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
 
     <!-- Tile icon for Win8 (144x144 + tile color) -->
@@ -89,9 +89,6 @@
     <script src="../bower_components/angular/angular.js"></script>
     <script src="../bower_components/angular-route/angular-route.js"></script>
     <script src="../bower_components/angular-animate/angular-animate.js"></script>
-    <script src="../bower_components/jquery/dist/jquery.js"></script>
-    <script src="../bower_components/popper.js/dist/umd/popper.js"></script>
-    <script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <!-- endbower -->
 
     <script src="app/app.js"></script>
